--- a/src/app/comun/detalle-hechizo/detalle-hechizo.component.sass
+++ b/src/app/comun/detalle-hechizo/detalle-hechizo.component.sass
@@ -24,7 +24,8 @@
       margin: 10px
       justify-content: center
       .imagenHechizo
-        width: 100%
+        max-height: 100%
+        max-width: 100%
         top: 0
         aspect-ratio: 1
         margin-bottom: auto
