--- a/src/app/comun/enemigo/enemigo.component.sass
+++ b/src/app/comun/enemigo/enemigo.component.sass
@@ -82,13 +82,13 @@
       justify-content: center
       left: 5%
       top: 60%
-      height: 32px
+      height: 30%
       width: 90%
-      min-height: 32px
 
       .contenedorBuffo
         position: relative
-        width: 20%
+        height: 100%
+        aspect-ratio: 1
 
         .contadorDuracion
           position: absolute
