--- a/src/app/comun/panel-general/panel-general.component.sass
+++ b/src/app/comun/panel-general/panel-general.component.sass
@@ -43,8 +43,10 @@
         flex-direction: column
         height: 18% 
         width: 100%
-        z-index: 11
+        z-index: 12
         align-items: center
+        &.panelAbierto
+          z-index: 15
 
         .iconoPanelGeneral
             position: relative
