--- a/src/styles.sass
+++ b/src/styles.sass
@@ -205,6 +205,8 @@ $colorSecundario: #ff8d40
     color: #f00 
   &.focusVerde
     color: #f00 
+  &.focusGris
+    color: rgb(255 255 255/40%) 
 
   &::before
     position: absolute
