--- a/src/app/comun/animacion-efecto/animacion-efecto.component.sass
+++ b/src/app/comun/animacion-efecto/animacion-efecto.component.sass
@@ -12,7 +12,7 @@
   animation-duration: 0.44s
   animation-timing-function: steps(5)
   animation-fill-mode: none
-  pointer-events: none
+  pointer-events: none !important
   animation-iteration-count: infinite
 
   &.Individual
