--- a/src/app/comun/boton/boton.component.sass
+++ b/src/app/comun/boton/boton.component.sass
@@ -51,6 +51,7 @@
   z-index: 100
   background-image: url("../../../assets/ui/buttons/bt_03_3.PNG")
   background-size: 100% 100% 
+  pointer-events: inherit
 
   .textoBoton
       position: absolute
@@ -62,6 +63,7 @@
       align-items: center
       justify-content: center
       color: white
+      pointer-events: inherit
 
   .interior
     position: absolute
