--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -11,6 +11,7 @@
     pointer-events: none
     div
         pointer-events: initial
+        
     .fondoNegro
         position: fixed
         top: 0
@@ -24,6 +25,36 @@
     text-align: center
     color: $colorTexto
 
+//FORMATEO DE DESCRIPCIONES
+mark
+  background-color: initial
+  &.fisico
+    color: crimson
+  &.magico
+    color: cornflowerblue
+  &.heal
+    color: chartreuse
+  &.escudo
+    color: white
+  &.violeta
+    color: fuchsia
+  &.amarillo
+    color: gold
+
+#flechaTutorial
+  position: absolute
+  z-index: 20
+  width: 8%
+  display: none
+
+  &.verticalUp
+    animation: movimientoFlechaVerticalUp 1s ease infinite 
+    display: block
+
+  &.iconoObjetivo
+    left: 20%
+    top: 25%
+  
 //*************************************************
 //          Interfaz Elegir Hechizo:
 //************************************************* -->
@@ -111,7 +142,7 @@
                 display: flex
                 justify-content: center
                 align-content: center
-                margin-top: 1vh
+                //margin-top: 1vh
                 width: 100%
                 .atributo
                     position: relative
@@ -159,13 +190,15 @@
                     display: inline-block
                     text-align: center
                     line-height: 11vw
-                    height: 10vh
-                    width: 10vh
-                    margin-right: 1.5vw
-                    margin-left: 1.5vw
+                    height: 13vh
+                    width: 13vh
+                    margin-right: 2vw
+                    margin-left: 2vw
                     outline: solid 1px white
                     overflow: hidden
                     background-size: 1800%
+                    z-index: 1
+
                     .cooldown
                       color: white
                       font-size: 40px
@@ -315,61 +348,184 @@
             width: 40%
             height: 100%
 
+
 //*************************************************
 //          Interfaz Detalle Enemigo / Heroe:
 //************************************************* -->
-
 #contenedorInterfazDetalle
     position: absolute
     background-color: $colorFondo2
+    display: grid
+    grid-template-columns: 1fr 2.5fr
+    grid-template-rows: 1fr repeat(2, 4fr)
+    grid-column-gap: 0px
+    grid-row-gap: 0px
     color: $colorTexto
     width: 50vw
-    height: 85vh
-    top: 50%
-    left: 50%
+    height: 95vh
+    top: 49%
+    left: 55%
     padding: 10px
     transform: translate(-50%, -50%)
-
+    .cruzCerrar
+      position: absolute
+      top: 1%
+      right: 1%
+      height: 10%
     .titulo
       position: relative
-      grid-area: 1 / 1 / 2 / 4
+      grid-area: 1 / 1 / 2 / 3 
       display: flex
       justify-content: center
       align-items: center
 
     .contenedorPersonaje
       position: absolute
-      width: 30%
-      height: 65%
+      width: 100%
+      height: 100%
       display: flex
+      flex-direction: column
+      grid-area: 2 / 1 / 3 / 2 
       justify-content: center
+      align-items: center
       .personaje
         position: relative
-        height: 50%
-        max-height: 15vw
+        height: 70%
         aspect-ratio: 1
+      .barra
+        position: relative
+        width: 100%
+        margin-top: 5%
+        height: 10%
+      .detallePuntosVida
+        position: relative
+        text-align: center
 
     .contenedorAtributos
       position: absolute
-      right: 5%
-      height: 70%
-      width: 60%
+      height: 100%
+      width: 100%
+      grid-area: 2 / 2 / 3 / 3
+      display: grid
+      grid-template-columns: repeat(2, 1fr)
+      grid-template-rows: repeat(3, 1fr)
+      grid-column-gap: 5px
+      grid-row-gap: 5px
 
       .atributo
         position: relative
         display: flex
+        align-items: center
         width: 100%
-        height: 15%
+        box-shadow: inset 0px 0px 15px 0px rgba(0,0,0,0.8)
+        border-radius: 5px
+
+        &.vitalidad
+          grid-area: 1 / 1 / 2 / 2
+        &.armadura  
+          grid-area: 2 / 1 / 3 / 2
+        &.resistencia  
+          grid-area: 3 / 1 / 4 / 2
+        &.fisico  
+          grid-area: 2 / 2 / 3 / 3
+        &.magico  
+          grid-area: 3 / 2 / 4 / 3
+        &.critico  
+          grid-area: 1 / 2 / 2 / 3
+
         .icono
           position: relative
           display: inline-block
-          height: 100%
-          margin-right: 10px
+          height: 2em 
+          width: 1.5em
+          margin: 0 10px
         .texto
           position: relative
           display: inline-block
 
+    .contenedorSinBuff
+      display: flex
+      justify-content: center
+      align-items: center
+      box-shadow: inset 0px 0px 15px 0px rgba(0,0,0,0.8)
+      grid-area: 3 / 1 / 4 / 3
+      border-radius: 10px
+      margin: 5%
 
+    .contenedorBuff
+      grid-area: 3 / 1 / 4 / 2
+      overflow-y: auto
+      display: flex
+      flex-direction: row
+      align-items: flex-start
+      flex-wrap: wrap
+      border: 1px solid grey
+      border-radius: 5px
+      scrollbar-width: none
+
+      &::-webkit-scrollbar
+        display: none
+      .buff
+        position: relative
+        width: 38%
+        height: auto
+        aspect-ratio: 1
+        margin: 5%
+        .imagenBuff
+          position: absolute
+          width: 100%
+        .contenedorDuracion
+          position: absolute
+          display: flex
+          justify-content: center
+          bottom: -20% 
+          right: -20%
+          height: 1.5em
+          aspect-ratio: 1
+          .fondoIndicador
+            position: absolute
+            width: 100%
+            filter: hue-rotate(325deg) 
+            &.ventaja
+              filter: hue-rotate(150deg) 
+          .valorIndicador
+            z-index: 1
+            color: white
+
+    .contenedorDetalleBuff
+      display: flex
+      align-items: center
+      grid-area: 3 / 2 / 4 / 3
+      overflow-y: scroll
+      scrollbar-width: none
+      &::-webkit-scrollbar
+        display: none
+      padding: 3%
+
+      .detalleBuff
+        position: relative
+        border: solid 1px dimgrey
+        padding: 1%
+        background-color: rgb(33,33,33)
+        .contenedorTituloBuff
+          position: relative
+          width: 100%
+          height: 50px
+          margin-bottom: 5px
+          .imagenBuff
+            position: relative
+            height: 100%
+            width: auto
+            aspect-ratio: 1
+            display: inline-block
+            background-size: 100% !important
+          .titulo
+            position: relative
+            display: inline-flex
+            vertical-align: top
+            height: 100%
+            margin-left: 20px
+            align-items: center
     .contenedorBotones
       position: absolute
       display: flex
@@ -861,6 +1017,15 @@
           width: 20%
           left: 60%
 
+      .valor
+        position: relative
+        grid-area: 2 / 3 / 3 / 5
+        .atributo
+          .contenedorAtributo
+            width: 100%
+            height: 100%
+            top: 0%
+
       .heroe
         position: relative
         grid-area: 2 / 5 / 4 / 7
@@ -955,6 +1120,11 @@
       .valor
         position: relative
         grid-area: 3 / 3 / 4 / 5
+        .atributo
+          .contenedorAtributo
+            width: 100%
+            height: 100%
+            top: 0%
 
       .heroe
         position: relative
@@ -1070,6 +1240,13 @@
   to
     transform: rotateY(1980deg)
 
+@keyframes movimientoFlechaVerticalUp
+  0%
+    transform: translateY(0%) rotate(-90deg)
+  50%
+    transform: translateY(10%) rotate(-90deg)
+  100%
+    transform: translateY(0%) rotate(-90deg)
 
 
 
