Correcciones Visuales IOS (DAU Barcelona)

--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -182,7 +182,7 @@
         flex-direction: column
         align-items: center
         width: 100%
-        margin-top: 10%
+        margin-top: 15px
         color: black
         padding: 3%
 
@@ -290,7 +290,7 @@
         width: 50%
         left: 48%
         height: 75%
-        margin-top: 5%
+        margin-top: 15px 
         color: black
         .contenedorTitulo
           display: flex
@@ -304,6 +304,10 @@
               transform: scaleX(-1)
         .contenido
           margin: 0% 3%
+          overflow-y: scroll
+          scrollbar-width: none
+          &::-webkit-scrollbar
+            display: none
       .contenedorDecoracion
         position: absolute
         display: flex
@@ -378,7 +382,7 @@
         width: 50%
         left: 48%
         height: 75%
-        margin-top: 5%
+        margin-top: 15px 
         color: black
         .contenedorTitulo
           display: flex
@@ -392,6 +396,10 @@
               transform: scaleX(-1)
         .contenido
           margin: 0% 3%
+          overflow-y: scroll
+          scrollbar-width: none
+          &::-webkit-scrollbar
+            display: none
       .contenedorControlSlide
         position: absolute
         display: flex
