--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -235,6 +235,7 @@
     top: 46%
     left: -2%
     height: 7%
+    aspect-ratio: 1
     z-index: 13
     border-radius: 100%
     background-color: $colorFondo1
